elp/tree-sitter-erlang/test/corpus/exprs.txt
==================
Atom
==================

-x(
    a
).

-x(
    a@09_Z
).

---

(source_file
  (attribute (atom) (atom))
  (attribute (atom) (atom))
)

==================
Var
==================

-x(
    Z
).

-x(
    _@
).

---

(source_file
  (attribute (atom) (var))
  (attribute (atom) (var))
)

==================
Wildcard
==================

-x(
    _
).

---

(source_file
  (attribute (atom) (wildcard))
)

==================
String
==================

-x(
    "abc\0\00\000\xAA\x{DEADBEEF}\n\r\t\v\b\f\e\s\d\
    "
).

---

(source_file
  (attribute (atom) (string))
)

==================
Quoted atom
==================

-x(
    'abc\0\00\000\xAA\x{DEADBEEF}\n\r\t\v\b\f\e\s\d\
    '
).

---

(source_file
  (attribute (atom) (atom))
)

==================
Unbalanced Quoted Atom
==================

-module(
    'foo
).

---

(source_file
  (module_attribute (atom (MISSING "'")))
)

==================
Char
==================

-x(
    $\s
).

---

(source_file
  (attribute (atom) (char))
)

==================
Integer
==================

-x(
    10
).

-x(
    2#01010101
).

-x(
    35#09AZaz
).

---

(source_file
  (attribute (atom) (integer))
  (attribute (atom) (integer))
  (attribute (atom) (integer))
)

==================
Float
==================

-x(
    10.0
).

-x(
    1_0.1_0e1_0
).

-x(
    9.9E+9
).

---

(source_file
  (attribute (atom) (float))
  (attribute (atom) (float))
  (attribute (atom) (float))
)
